# LLM-glitch-token-exp

./: .env.example  .gitignore  README.md  main.ipynb  poc.ipynb  pyproject.toml  test.sh
src/llm_reversing/: __init__.py  extract.py  glitch_tokens.py  inject.py  normalize.py
