[project]
authors = [{name = "ccss17", email = "chansol0505@naver.com"}]
dependencies = []
name = "LLM-Reversing"
requires-python = "== 3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "https://repo.prefix.dev/meta-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
llm_reversing = { path = ".", editable = true }

[tool.pixi.tasks]
normalize = "python src/llm_reversing/normalize.py"

extract_exaone_3_0 = "python src/llm_reversing/extract.py --model LGAI-EXAONE/EXAONE-3.0-7.8B-Instruct --output_dir results --low_threshold 3.0 --high_threshold 1.0"
extract_exaone_4_0_1_32b = "python src/llm_reversing/extract.py --model LGAI-EXAONE/EXAONE-4.0.1-32B --output_dir results --low_threshold 3.0 --high_threshold 1.0"
extract_hyperclovax = "python src/llm_reversing/extract.py --model naver-hyperclovax/HyperCLOVAX-SEED-Vision-Instruct-3B --output_dir results --low_threshold 3.0 --high_threshold 1.0"
extract_hyperclovax_think = "python src/llm_reversing/extract.py --model naver-hyperclovax/HyperCLOVAX-SEED-Think-14B --output_dir results --low_threshold 3.0 --high_threshold 1.0"
extract_kullm3 = "python src/llm_reversing/extract.py --model nlpai-lab/KULLM3 --output_dir results --low_threshold 3.0 --high_threshold 1.0"
extract_kanana_base ="python src/llm_reversing/extract.py --model kakaocorp/kanana-1.5-8b-base --output_dir results --low_threshold 3.0 --high_threshold 1.0"
extract_solar = "python src/llm_reversing/extract.py --model upstage/SOLAR-10.7B-v1.0 --output_dir results --low_threshold 3.0 --high_threshold 1.0"
extract_kanana_a3b = "python src/llm_reversing/extract.py --model kakaocorp/kanana-1.5-15.7b-a3b-instruct --output_dir results --low_threshold 3.0 --high_threshold 1.0"
extract_kanana_safeguard_8b = "python src/llm_reversing/extract.py --model kakaocorp/kanana-safeguard-8b --output_dir results --low_threshold 3.0 --high_threshold 1.0"
extract_exaone_3_5_32b = "python src/llm_reversing/extract.py --model LGAI-EXAONE/EXAONE-3.5-32B-Instruct --output_dir results --low_threshold 3.0 --high_threshold 1.0"
extract_solar_instruct_v1_0 = "python src/llm_reversing/extract.py --model upstage/SOLAR-10.7B-Instruct-v1.0 --output_dir results --low_threshold 3.0 --high_threshold 1.0"

glitch_tokens_exaone_3_0  = "python src/llm_reversing/glitch_tokens.py --model LGAI-EXAONE/EXAONE-3.0-7.8B-Instruct  --num_low 20 --num_high 20"
glitch_tokens_exaone_4_0_1_32b = "python src/llm_reversing/glitch_tokens.py --model LGAI-EXAONE/EXAONE-4.0.1-32B  --num_low 20 --num_high 20"
glitch_tokens_hyperclovax = "python src/llm_reversing/glitch_tokens.py --model naver-hyperclovax/HyperCLOVAX-SEED-Vision-Instruct-3B  --num_low 20 --num_high 20"
glitch_tokens_hyperclovax_think = "python src/llm_reversing/glitch_tokens.py --model naver-hyperclovax/HyperCLOVAX-SEED-Think-14B  --num_low 20 --num_high 20"
glitch_tokens_kullm3 = "python src/llm_reversing/glitch_tokens.py --model nlpai-lab/KULLM3  --num_low 20 --num_high 20"
glitch_tokens_kanana_base = "python src/llm_reversing/glitch_tokens.py --model kakaocorp/kanana-1.5-8b-base  --num_low 20 --num_high 20"
glitch_tokens_solar = "python src/llm_reversing/glitch_tokens.py --model upstage/SOLAR-10.7B-v1.0  --num_low 20 --num_high 20"
glitch_tokens_kanana_a3b = "python src/llm_reversing/glitch_tokens.py --model kakaocorp/kanana-1.5-15.7b-a3b-instruct  --num_low 20 --num_high 20"
glitch_tokens_kanana_safeguard_8b = "python src/llm_reversing/glitch_tokens.py --model kakaocorp/kanana-safeguard-8b  --num_low 20 --num_high 20"
glitch_tokens_exaone_3_5_32b = "python src/llm_reversing/glitch_tokens.py --model LGAI-EXAONE/EXAONE-3.5-32B-Instruct  --num_low 20 --num_high 20"
glitch_tokens_solar_instruct_v1_0 = "python src/llm_reversing/glitch_tokens.py --model upstage/SOLAR-10.7B-Instruct-v1.0  --num_low 20 --num_high 20"

inject_hyperclovax = "python src/llm_reversing/inject.py --model naver-hyperclovax/HyperCLOVAX-SEED-Vision-Instruct-3B  --num_tokens 20"
inject_exaone_3_0 = "python src/llm_reversing/inject.py --model LGAI-EXAONE/EXAONE-3.0-7.8B-Instruct  --num_tokens 20"
inject_exaone_4_0_1_32b = "python src/llm_reversing/inject.py --model LGAI-EXAONE/EXAONE-4.0.1-32B  --num_tokens 20"
inject_hyperclovax_think = "python src/llm_reversing/inject.py --model naver-hyperclovax/HyperCLOVAX-SEED-Think-14B  --num_tokens 20"
inject_kullm3 = "python src/llm_reversing/inject.py --model nlpai-lab/KULLM3  --num_tokens 20"
inject_kanana_base = "python src/llm_reversing/inject.py --model kakaocorp/kanana-1.5-8b-base  --num_tokens 20"
inject_solar = "python src/llm_reversing/inject.py --model upstage/SOLAR-10.7B-v1.0  --num_tokens 20"
inject_kanana_a3b = "python src/llm_reversing/inject.py --model kakaocorp/kanana-1.5-15.7b-a3b-instruct  --num_tokens 20"
inject_kanana_safeguard_8b = "python src/llm_reversing/inject.py --model kakaocorp/kanana-safeguard-8b  --num_tokens 20"
inject_exaone_3_5_32b = "python src/llm_reversing/inject.py --model LGAI-EXAONE/EXAONE-3.5-32B-Instruct  --num_tokens 20"
inject_solar_instruct_v1_0 = "python src/llm_reversing/inject.py --model upstage/SOLAR-10.7B-Instruct-v1.0  --num_tokens 20"

glitch_tokens_exaone_3_0_test = "python src/llm_reversing/glitch_tokens.py --model LGAI-EXAONE/EXAONE-3.0-7.8B-Instruct  --num_low 1 --num_high 1"
glitch_tokens_exaone_4_0_1_32b_test = "python src/llm_reversing/glitch_tokens.py --model LGAI-EXAONE/EXAONE-4.0.1-32B  --num_low 1 --num_high 1"
glitch_tokens_hyperclovax_test = "python src/llm_reversing/glitch_tokens.py --model naver-hyperclovax/HyperCLOVAX-SEED-Vision-Instruct-3B  --num_low 1 --num_high 1"
glitch_tokens_hyperclovax_think_test = "python src/llm_reversing/glitch_tokens.py --model naver-hyperclovax/HyperCLOVAX-SEED-Think-14B  --num_low 1 --num_high 1"
glitch_tokens_kullm3_test = "python src/llm_reversing/glitch_tokens.py --model nlpai-lab/KULLM3  --num_low 1 --num_high 1"
glitch_tokens_kanana_test = "python src/llm_reversing/glitch_tokens.py --model kakaocorp/kanana-1.5-8b-base  --num_low 1 --num_high 1"
glitch_tokens_solar_test = "python src/llm_reversing/glitch_tokens.py --model upstage/SOLAR-10.7B-v1.0  --num_low 1 --num_high 1"

inject_hyperclovax_test = "python src/llm_reversing/inject.py --model naver-hyperclovax/HyperCLOVAX-SEED-Vision-Instruct-3B  --num_tokens 1"
inject_exaone_3_0_test = "python src/llm_reversing/inject.py --model LGAI-EXAONE/EXAONE-3.0-7.8B-Instruct  --num_tokens 1"
inject_exaone_4_0_1_32b_test = "python src/llm_reversing/inject.py --model LGAI-EXAONE/EXAONE-4.0.1-32B  --num_tokens 1"
inject_hyperclovax_think_test = "python src/llm_reversing/inject.py --model naver-hyperclovax/HyperCLOVAX-SEED-Think-14B  --num_tokens 1"
inject_kullm3_test = "python src/llm_reversing/inject.py --model nlpai-lab/KULLM3  --num_tokens 1"
inject_kanana_test = "python src/llm_reversing/inject.py --model kakaocorp/kanana-1.5-8b-base  --num_tokens 1"
inject_solar_test = "python src/llm_reversing/inject.py --model upstage/SOLAR-10.7B-v1.0  --num_tokens 1"

# # OFF
# extract_kogpt = "python src/llm_reversing/extract.py --model kakaobrain/kogpt --output_dir results --low_threshold 3.0 --high_threshold 1.0"
# glitch_tokens_kogpt = "python src/llm_reversing/glitch_tokens.py --model kakaobrain/kogpt  --num_low 300 --num_high 300"
# inject_kogpt = "python src/llm_reversing/inject.py --model kakaobrain/kogpt  --num_tokens 300"

# # OFF
# extract_solar_pro_preview = "python src/llm_reversing/extract.py --model upstage/solar-pro-preview-pretrained --output_dir results --low_threshold 3.0 --high_threshold 1.0"
# glitch_tokens_solar_pro_preview = "python src/llm_reversing/glitch_tokens.py --model upstage/solar-pro-preview-pretrained  --num_low 300 --num_high 300"
# inject_solar_pro_preview = "python src/llm_reversing/inject.py --model upstage/solar-pro-preview-pretrained  --num_tokens 300"

# # OFF
# extract_thunder_llm_8b = "python src/llm_reversing/extract.py --model thunder-research-group/Llama-Thunder-LLM-8B --output_dir results --low_threshold 3.0 --high_threshold 1.0"
# glitch_tokens_thunder_llm_8b = "python src/llm_reversing/glitch_tokens.py --model thunder-research-group/Llama-Thunder-LLM-8B  --num_low 300 --num_high 300"
# inject_thunder_llm_8b = "python src/llm_reversing/inject.py --model thunder-research-group/Llama-Thunder-LLM-8B  --num_tokens 300"

# # OFF
# extract_korani_v3_13b = "python src/llm_reversing/extract.py --model KRAFTON/KORani-v3-13B --output_dir results --low_threshold 3.0 --high_threshold 1.0"
# glitch_tokens_korani_v3_13b = "python src/llm_reversing/glitch_tokens.py --model KRAFTON/KORani-v3-13B  --num_low 300 --num_high 300"
# inject_korani_v3_13b = "python src/llm_reversing/inject.py --model KRAFTON/KORani-v3-13B  --num_tokens 300"


[tool.pixi.system-requirements]
cuda = "12.9"

[tool.pixi.dependencies]
cuda-version = "12.9.*"
pytorch = ">=2.7.1,<3"
transformers = ">=4.35.0"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
tqdm = ">=4.65.0"
gradio = ">=4.0.0"
requests = ">=2.31.0"
beautifulsoup4 = ">=4.12.0"
fire = ">=0.7.1,<0.8"
python-dotenv = ">=1.1.1,<2"
huggingface_hub = ">=0.19.0"
accelerate = ">=1.10.1,<2"
python = "3.12.*"
flash-attn = "2.7.4.*"
vllm = ">=0.10.0,<0.11"
timm = ">=1.0.20,<2"
ipykernel = ">=7.0.1,<8"
flashinfer = ">=0.2.12,<0.3"




